exports[`modularScale should allow adjusting the base 1`] = `
Object {
  "font-size": "2.666em",
}
`;

exports[`modularScale should allow adjusting the base with a number value 1`] = `
Object {
  "font-size": "2.666em",
}
`;

exports[`modularScale should allow adjusting the ratio 1`] = `
Object {
  "font-size": "1em",
}
`;

exports[`modularScale should allow any of the predefined ratio names 1`] = `
Object {
  "font-size": "1.067em",
}
`;

exports[`modularScale should allow any of the predefined ratio names 2`] = `
Object {
  "font-size": "1.125em",
}
`;

exports[`modularScale should allow any of the predefined ratio names 3`] = `
Object {
  "font-size": "1.2em",
}
`;

exports[`modularScale should allow any of the predefined ratio names 4`] = `
Object {
  "font-size": "1.25em",
}
`;

exports[`modularScale should allow any of the predefined ratio names 5`] = `
Object {
  "font-size": "1.333em",
}
`;

exports[`modularScale should allow any of the predefined ratio names 6`] = `
Object {
  "font-size": "1.414em",
}
`;

exports[`modularScale should allow any of the predefined ratio names 7`] = `
Object {
  "font-size": "1.5em",
}
`;

exports[`modularScale should allow any of the predefined ratio names 8`] = `
Object {
  "font-size": "1.6em",
}
`;

exports[`modularScale should allow any of the predefined ratio names 9`] = `
Object {
  "font-size": "1.618em",
}
`;

exports[`modularScale should allow any of the predefined ratio names 10`] = `
Object {
  "font-size": "1.667em",
}
`;

exports[`modularScale should allow any of the predefined ratio names 11`] = `
Object {
  "font-size": "1.778em",
}
`;

exports[`modularScale should allow any of the predefined ratio names 12`] = `
Object {
  "font-size": "1.875em",
}
`;

exports[`modularScale should allow any of the predefined ratio names 13`] = `
Object {
  "font-size": "2em",
}
`;

exports[`modularScale should allow any of the predefined ratio names 14`] = `
Object {
  "font-size": "2.5em",
}
`;

exports[`modularScale should allow any of the predefined ratio names 15`] = `
Object {
  "font-size": "2.667em",
}
`;

exports[`modularScale should allow any of the predefined ratio names 16`] = `
Object {
  "font-size": "3em",
}
`;

exports[`modularScale should allow any of the predefined ratio names 17`] = `
Object {
  "font-size": "4em",
}
`;

exports[`modularScale should throw a warning if more than 3 parameters are provided 1`] = `
Array [
  Array [
    "%c ✨ WARNING ✨ ---- helpers/modularScale.js --%c

modularScale %cexpects a maximum of %c3 parameters%c. However, you passed %c4 parameters%c. This additional parameter was ignored.
  %c
Please see the documentation at %chttps://polished.js.org/docs/#modularScale%c for more information.",
    "font-weight: bold; color: black",
    "color: black; font-size: 12px; font-weight: bold",
    "color: black; font-size: 12px",
    "color: black; font-size: 12px; font-weight: bold; color: green",
    "color: black; font-size: 12px",
    "color: black; font-size: 12px; font-weight: bold; color: goldenrod",
    "color: black; font-size: 12px",
    "color: gray; line-height: 1.4",
    "color: blue; line-height: 1.4",
    "color: gray; line-height: 1.4",
  ],
]
`;

exports[`modularScale should throw an error if a non-number or non-string value for base is provided 1`] = `
Array [
  Array [
    "%c ✨ ERROR ✨ ---- helpers/modularScale.js --%c

modularScale %cexpects a 2nd parameter of type number,em. However, you passed true(boolean) instead.
  %c
Please see the documentation at %chttps://polished.js.org/docs/#modularScale%c for more information.",
    "font-weight: bold; color: black",
    "color: black; font-size: 12px; font-weight: bold",
    "color: black; font-size: 12px",
    "color: gray; line-height: 1.4",
    "color: blue; line-height: 1.4",
    "color: gray; line-height: 1.4",
  ],
]
`;

exports[`modularScale should throw an error if a non-number value for steps is provided 1`] = `
Array [
  Array [
    "%c ✨ ERROR ✨ ---- helpers/modularScale.js --%c

modularScale %cexpects a 1st parameter of type number. However, you passed invalid(string) instead.
  %c
Please see the documentation at %chttps://polished.js.org/docs/#modularScale%c for more information.",
    "font-weight: bold; color: black",
    "color: black; font-size: 12px; font-weight: bold",
    "color: black; font-size: 12px",
    "color: gray; line-height: 1.4",
    "color: blue; line-height: 1.4",
    "color: gray; line-height: 1.4",
  ],
]
`;

exports[`modularScale should throw an error if an invalid ratio is provided 1`] = `
Array [
  Array [
    "%c ✨ ERROR ✨ ---- helpers/modularScale.js --%c

modularScale %cexpects a 3rd parameter of type number,enumberable. However, you passed invalid(string) instead.
  %c
Please see the documentation at %chttps://polished.js.org/docs/#modularScale%c for more information.",
    "font-weight: bold; color: black",
    "color: black; font-size: 12px; font-weight: bold",
    "color: black; font-size: 12px",
    "color: gray; line-height: 1.4",
    "color: blue; line-height: 1.4",
    "color: gray; line-height: 1.4",
  ],
]
`;

exports[`modularScale should throw an error if an invalid string-based value for base is provided 1`] = `
Array [
  Array [
    "%c ✨ ERROR ✨ ---- helpers/modularScale.js --%c

modularScale %cexpects a 2nd parameter of type number,em. However, you passed invalid(string) instead.
  %c
Please see the documentation at %chttps://polished.js.org/docs/#modularScale%c for more information.",
    "font-weight: bold; color: black",
    "color: black; font-size: 12px; font-weight: bold",
    "color: black; font-size: 12px",
    "color: gray; line-height: 1.4",
    "color: blue; line-height: 1.4",
    "color: gray; line-height: 1.4",
  ],
]
`;

exports[`modularScale should use perfectFourth and 1em base by default 1`] = `
Object {
  "font-size": "1.333em",
}
`;

exports[`modularScale should use perfectFourth and 1em base by default 2`] = `
Object {
  "font-size": "1.776889em",
}
`;

exports[`modularScale should use perfectFourth and 1em base by default 3`] = `
Object {
  "font-size": "1em",
}
`;
